src/main/java/com/example/webfluxstart/operators/error/domain/NotAllowedException.java
package com.example.webfluxstart.operators.error.domain;

public class NotAllowedException extends RuntimeException{
}
